@@ -277,6 +277,8 @@ removed and text documention at link directs one to a URL that is broken." -->
 	ftp://ftp.netbsd.org/pub/NetBSD/NetBSD-1.3.3/mvme68k/INSTALL
   -->
 
+<!ENTITY url-m68k-cts-faq "http://people.debian.org/~cts/debian-m68k/sarge/">
+
 <!ENTITY url-m68k-faq "http://www.linux-m68k.org/faq/faq.html">
 
 <!ENTITY url-m68k-mac "http://www.mac.linux-m68k.org/"> 
